Prevent some elements on categories taxonomy from wrapping

--- a/assets/css/bobastyle.css
+++ b/assets/css/bobastyle.css
@@ -167,6 +167,11 @@
   margin-left: auto;
 }
 
+.category-list a,
+.category-list .category-metadata {
+  white-space: nowrap;
+}
+
 
 
 /* Tags list format */
